Learned how to use NgIf directive

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,3 +1,8 @@
+<small *ngIf = "invalidLogin">{{errorMessage}}</small>
+<div>
 UserName : <input type="text" name = "userName" [(ngModel)] = "userName"/> 
 Password : <input type="password" name="password" [(ngModel)] = "password"/>
+</div>
+<!-- UserName : {{userName}} -->
+
 <button (click) = handleLogin()>Login</button>
