--- a/src/app/welcome/welcome.component.html
+++ b/src/app/welcome/welcome.component.html
@@ -1,1 +1,2 @@
-Welcome {{name}}! Welcome to the app
+<div>Welcome {{name}}! Welcome to the app</div>
+<div>You can manage your todos  <a routerLink ='/todos'>here</a></div>
