--- a/src/app/list-todo/list-todo.component.html
+++ b/src/app/list-todo/list-todo.component.html
@@ -11,6 +11,8 @@
         <tr *ngFor = "let todo of todos">
             <td>{{todo.id}}</td>
             <td>{{todo.description}}</td>
+            <td>{{todo.done}}</td>
+            <td>{{todo.targetDate | date }}</td>
         </tr>
     <!-- } -->
     </tbody>
