Keeping Todo class as separate model
* Using the Todo object to set the list of todos in component.ts

--- a/src/app/list-todo/list-todo.component.html
+++ b/src/app/list-todo/list-todo.component.html
@@ -4,6 +4,8 @@
         <tr>
         <th>id</th>
         <th>description</th>
+        <th>isDone</th>
+        <th>targetDate</th>
     </tr>
     </thead>
     <tbody>
