Use BootStrap to for better visibility

--- a/src/app/welcome/welcome.component.html
+++ b/src/app/welcome/welcome.component.html
@@ -1,2 +1,4 @@
-<div>Welcome {{name}}! Welcome to the app</div>
-<div>You can manage your todos  <a routerLink ='/todos'>here</a></div>
+<h1>Welcome!</h1>
+<div class = "container">Welcome {{name}}! Welcome to the app
+You can manage your todos  <a routerLink ='/todos'>here</a>
+</div>
