--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -178,5 +178,9 @@
 </style> -->
 
     <!-- <app-login></app-login> -->
-   
+    <app-menu></app-menu>
+<div class = "container">
 <router-outlet />  
+</div>
+<app-footer></app-footer>
+
