--- a/src/app/list-todo/list-todo.component.html
+++ b/src/app/list-todo/list-todo.component.html
@@ -1,6 +1,7 @@
-<table border="1">
-    <caption>My Todos</caption>
-    <thead>
+<h1>My Todo's</h1>
+<div class = "container">
+<table class="table">
+     <thead>
         <tr>
         <th>id</th>
         <th>description</th>
@@ -19,3 +20,4 @@
     <!-- } -->
     </tbody>
 </table>
+</div>
