--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,8 +1,11 @@
-<small *ngIf = "invalidLogin">{{errorMessage}}</small>
+<h1>Login!</h1>
+<div class = "alert alert-warning" *ngIf = "invalidLogin">{{errorMessage}}</div>
+<div  class = "container">
 <div>
 UserName : <input type="text" name = "userName" [(ngModel)] = "userName"/> 
 Password : <input type="password" name="password" [(ngModel)] = "password"/>
 </div>
 <!-- UserName : {{userName}} -->
 
-<button (click) = handleLogin()>Login</button>
+<button class = "btn btn-success" (click) = handleLogin()>Login</button>
+</div>
