--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -3,13 +3,13 @@
         <div> <a href = 'https://www.google.com/' class = "navbar-brand">Google Search</a></div>
 
         <ul class ="navbar-nav">
-            <li><a href ="" class ="nav-link">HOME</a></li>
-            <li><a href ="/todos" class ="nav-link">Todos</a></li>
+            <li><a routerLink ="" class ="nav-link">HOME</a></li>
+            <li><a routerLink ="/todos" class ="nav-link">Todos</a></li>
         </ul>
 
         <ul class ="navbar-nav navbar-collapse justify-content-end">
-            <li><a href ="/login" class ="nav-link">Login</a></li>
-            <li><a href ="/logout" class ="nav-link">Logout</a></li>
+            <li><a routerLink ="/login" class ="nav-link">Login</a></li>
+            <li><a routerLink ="/logout" class ="nav-link">Logout</a></li>
         </ul>
     </nav>
 </header>
